# att

./: .gitignore  erd.org  pyproject.toml
att/: adapters.py  admin.py  forms.py  models.py  parsecourse.py  urls.py  views.py
att/migrations/: 0001_initial.py  0002_section_course_teacher_course_weekly_sessions_and_more.py  0003_academicyear_nonschoolday.py  0004_course_academic_year.py  0005_remove_course_academic_year.py  0006_alter_enrolment_unique_together.py  0007_rename_weekday_weeklyschedule_iso_weekday.py  0008_alter_attendancerecord_status.py  0009_lesson_start_datetime.py  0010_teacher_landing_url.py
att/templates/: base.html
att/templates/att/: base.html  lesson.html  lessons_on_day.html  report_day.html  report_from.html  report_student.html  report_student_select.html  select_student.html  setup.html  setup_attendance_records.html  setup_calendar.html  setup_courses.html  setup_lessons.html  setup_nonschool_days.html  setup_students.html  setup_teachers.html  setup_timetable.html  setup_timetables.html  student_lessons_on_day.html  student_on_date.html  student_on_day.html  student_week.html  week_view.html
att/utils/: excel_to_csv.py  parse_alporarea_csv.py
config/: settings.py  urls.py
